--- a/src/components/organisms/Campaign/Details/Rewards/Questers/questers.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/Questers/questers.module.css
@@ -1,24 +1,34 @@
 .root {
-    @apply bg-white shadow-sm rounded-lg mb-6 mt-10
+  @apply bg-white shadow-sm rounded-lg mb-6 mt-10 pb-6;
 }
 
 .questers {
-    @apply flex flex-wrap items-center justify-between py-6 px-4 gap-3;
+  @apply flex flex-wrap items-center justify-between px-4 gap-3;
 }
+
+.questers > div {
+  @apply w-full;
+}
+
+.questers > div > div {
+  @apply flex items-center gap-3;
+}
+
 .questerAvt {
-    @apply block w-12 h-12 rounded-full flex items-center justify-center font-semibold shadow-sm;
+  @apply inline-block rounded-full flex items-center justify-center py-1 px-3 font-medium shadow-sm;
 }
+
 .loadMore {
-    @apply hover:bg-blue-600 hover:text-white inline-block border border-2 border-gray-200 hover:border-blue-600 rounded-md py-2 px-6 text-center w-52;
+  @apply hover:bg-blue-600 hover:text-white inline-block border border-2 border-gray-200 hover:border-blue-600 rounded-md py-2 px-6 text-center w-52;
 }
 
 .rootDark .loadMore {
-    @apply border border-gray-700;
+  @apply border border-gray-700;
 }
 
 .loading {
-    padding: 10px;
-    text-align: center;
+  padding: 10px;
+  text-align: center;
 }
 
 .noResult {
