--- a/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
@@ -36,19 +36,22 @@
 }
 
 .btnClaimRewardWrap button {
-  @apply bg-gray-200 flex items-center justify-center text-gray-500 text-center font-medium;
+  /*@apply bg-gray-200 flex items-center justify-center text-gray-500 text-center font-medium;*/
+  @apply flex items-center justify-center text-center font-medium;
 }
 
 .btnClaimReward {
-  @apply bg-blue-500 hover:bg-blue-600 text-white block py-2.5 px-4 text-center rounded-lg transition-all duration-300 w-full;
+  @apply bg-blue-600 hover:bg-blue-600 text-white block py-2.5 px-4 text-center rounded-lg transition-all duration-300 w-full;
 }
 
 .btnClaimRewardDisabled {
   composes: btnClaimReward;
-  @apply bg-gray-600 hover:bg-gray-600;
+  /*@apply bg-gray-600 hover:bg-gray-600;*/
+  @apply bg-gray-200 flex items-center justify-center text-gray-500 text-center font-medium;
   cursor: not-allowed;
   pointer-events: none;
 }
+
 
 .taskIndex {
   @apply bg-white border border-gray-200 text-gray-500 flex items-center justify-center font-bold block w-8 h-8 rounded-full mr-2 text-center shadow-sm -ml-6;
