--- a/src/components/organisms/Campaign/List/item.module.css
+++ b/src/components/organisms/Campaign/List/item.module.css
@@ -1,5 +1,5 @@
 .root {
-	@apply bg-white border-2 border-transparent shadow-sm hover:border-violet-600 rounded-xl transition-shadow flex flex-col items-stretch transition-all duration-500;
+	@apply bg-white border-2 border-transparent shadow-sm hover:border-violet-600 rounded-xl transition-shadow flex flex-col items-stretch relative transition-all duration-500;
 }
 
 .rootDark {
@@ -9,6 +9,10 @@
 
 .root:hover .getCoupon {
 	@apply bg-violet-600 text-white;
+}
+
+.getCoupon::before {
+	@apply content-[""] block absolute top-0 right-0 bottom-0 left-0;
 }
 
 .couponAmoun {
