--- a/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
@@ -41,7 +41,7 @@
 }
 
 .btnClaimReward {
-  @apply bg-blue-600 hover:bg-blue-600 text-white block py-2.5 px-4 text-center rounded-lg transition-all duration-300 w-full;
+  @apply bg-violet-600 hover:bg-violet-700 text-white block py-2.5 px-4 text-center rounded-lg transition-all duration-300 w-full;
 }
 
 .btnClaimRewardDisabled {
