--- a/src/components/organisms/Campaign/List/list.module.css
+++ b/src/components/organisms/Campaign/List/list.module.css
@@ -47,11 +47,11 @@
 }
 
 .infiniteFinished {
-	@apply bg-violet-600 hover:bg-violet-700 cursor-pointer text-white max-w-xs rounded-md col-start-1 col-end-1 md:col-end-3 lg:col-end-4 text-center mt-4 py-3 px-20 hover:px-24 mx-auto transition-all duration-300;
+	@apply bg-violet-600 hover:bg-violet-700 cursor-pointer text-white max-w-xs rounded-md col-start-1 col-end-1 md:col-end-3 lg:col-end-4 text-center font-medium mt-4 py-3 px-20 hover:px-24 mx-auto transition-all duration-300;
 }
 
 .rootDark .infiniteFinished {
-	@apply bg-gray-800 text-gray-600;
+	@apply bg-violet-700 hover:bg-violet-600 text-violet-200 hover:text-white;
 }
 
 /* Filter bar */
