--- a/src/components/organisms/Campaign/Details/Rewards/Questers/questers.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/Questers/questers.module.css
@@ -11,11 +11,11 @@
 }
 
 .questers > div > div {
-  @apply flex flex-wrap items-center gap-3;
+  @apply flex flex-wrap items-center gap-2.5;
 }
 
 .questerAvt {
-  @apply rounded-full flex flex-wrap items-center justify-center py-1 px-3 font-medium shadow-sm;
+  @apply rounded-full flex flex-wrap items-center justify-center py-1 px-3 text-sm font-medium shadow-sm;
 }
 
 .loadMore {
