--- a/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
@@ -51,6 +51,16 @@
   @apply bg-gray-200 hover:bg-sky-500 hover:text-white text-gray-700 font-semibold rounded-full py-1.5 px-3 text-xs ml-auto transition-all duration-300;
 }
 
+/* Step 5 */
+.soulBoundTokenTask {
+  @apply border border-violet-400 rounded-md flex items-start relative pt-4 pb-3 px-2;
+}
+
+.bsc {
+  composes: bsc from '../../Rewards/rewards.module.css';
+  float: left;
+}
+
 .btnClaimRewardWrap {
   @apply mt-4 pt-4;
 }
@@ -69,13 +79,4 @@
   @apply bg-gray-200 flex items-center justify-center text-gray-500 text-center font-medium;
   cursor: not-allowed;
   pointer-events: none;
-}
-
-.soulBoundTokenTask {
-  @apply border border-violet-400 rounded-md flex items-start p-2;
-}
-
-.bsc {
-  composes: bsc from '../../Rewards/rewards.module.css';
-  float: left;
 }
