--- a/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
@@ -74,9 +74,19 @@
   @apply bg-violet-600 hover:bg-violet-700 text-white block py-2.5 px-4 text-center rounded-lg transition-all duration-300 w-full;
 }
 
-.btnClaimRewardDisabled {
-  composes: btnClaimReward;
-  @apply bg-gray-200 flex items-center justify-center text-gray-500 text-center font-medium;
+.disabled {
   cursor: not-allowed;
   pointer-events: none;
+}
+
+.btnClaimRewardDisabled {
+  composes: btnClaimReward;
+  composes: disabled;
+  @apply bg-gray-200 flex items-center justify-center text-gray-500 text-center font-medium;
+}
+
+.taskLoading {
+  composes: disabled;
+  opacity: 0.6;
+  @apply bg-gray-200 text-gray-500 text-center font-medium;
 }
