--- a/src/components/atoms/Heading/heading.module.css
+++ b/src/components/atoms/Heading/heading.module.css
@@ -8,5 +8,5 @@
 }
 
 .subHeading {
-  @apply text-gray-800 mx-auto text-center text-lg md:text-xl font-medium;
+  @apply text-gray-800 mx-auto text-center text-base md:text-xl font-medium;
 }
