Improve dark theme
Improve dark theme

--- a/src/components/organisms/Campaign/Details/Rewards/Questers/questers.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/Questers/questers.module.css
@@ -1,5 +1,9 @@
 .root {
-  @apply bg-white shadow-sm rounded-lg mt-10 pb-6;
+  @apply bg-white shadow-sm rounded-xl mt-10 pb-6;
+}
+
+.rootDark {
+  @apply bg-gray-800 rounded-xl;
 }
 
 .questers {
