--- a/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
@@ -2,6 +2,10 @@
   @apply bg-white border-2 border-violet-500 shadow-sm rounded-lg mb-6
 }
 
+.rootDark {
+  @apply bg-gray-800;
+}
+
 .taskIndex {
   @apply bg-white border border-gray-200 text-xs text-gray-700 font-semibold flex items-center justify-center block rounded-full text-center py-0.5 px-2 absolute -top-2.5 left-2;
 }
