--- a/src/components/organisms/Campaign/Details/detail.module.css
+++ b/src/components/organisms/Campaign/Details/detail.module.css
@@ -3,6 +3,7 @@
 }
 
 .rootDark {
+  @apply bg-gray-900;
 }
 
 /*.pageWrap {*/
@@ -31,11 +32,14 @@
 }
 
 .rootDark .pageContent {
-  @apply border-r border-gray-800;
 }
 
 .pageContentInner {
   @apply bg-white rounded-lg shadow-sm py-4 px-6 pt-0
+}
+
+.rootDark .pageContentInner {
+  @apply bg-gray-800;
 }
 
 .coverImage {
@@ -43,7 +47,7 @@
 }
 
 .campaignMeta {
-  @apply border-b border-gray-200 flex flex-wrap items-center justify-start lg:pb-4 mb-6 gap-6 text-sm;
+  @apply flex flex-wrap items-center justify-start mb-6 gap-6 text-sm;
 }
 
 .pageSidebar {
