Fine-tuning for submitted tasks case.

--- a/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
@@ -85,6 +85,11 @@
   @apply bg-gray-200 flex items-center justify-center text-gray-500 text-center font-medium;
 }
 
+.btnClaimRewardSubmitted {
+  composes: btnClaimRewardDisabled;
+  @apply bg-green-600 border border-green-600 text-white;
+}
+
 .taskLoading {
   composes: disabled;
   opacity: 0.6;
