Fine-tuning to handle Directus access_token on client-side.

--- a/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
@@ -13,7 +13,7 @@
 }
 
 .taskSuccess {
-  @apply border border-green-600 text-green-600;
+  @apply /*border border-green-600*/ text-green-600;
 }
 
 /* Step 1 */
