--- a/src/components/organisms/Campaign/Details/detail.module.css
+++ b/src/components/organisms/Campaign/Details/detail.module.css
@@ -28,7 +28,7 @@
 }
 
 .pageContent {
-  @apply lg:px-4 basis-full md:basis-2/3 mb-4 lg:mb-0;
+  @apply lg:pr-4 basis-full md:basis-2/3 mb-4 lg:mb-0;
 }
 
 .rootDark .pageContent {
@@ -51,7 +51,7 @@
 }
 
 .pageSidebar {
-  @apply basis-full md:basis-1/3 lg:px-4 max-w-full;
+  @apply basis-full md:basis-1/3 lg:pl-4 max-w-full;
 }
 
 .loading {
