--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,12 @@
 html {
   height: 100%;
   font-feature-settings: "cv02","cv03","cv04","cv11";
+
+  /* Better Font Rendering =========== */
+  -moz-font-smoothing: antialiased;
+  -moz-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
